# astronomia-galaxy-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
apps/api/: auth.py  config.py  main.py
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CONVERSATION_UX.md  README.md
notebooks/: README.md
scripts/: README.md  test_analyze_multi.py  test_analyze_with_fetch.py  test_resolve_and_fetch.py
tests/: test_galaxy_core.py
